--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.15.3",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
-    "vuetify": "^0.17.2"
+    "vuetify": "^0.17.2",
+    "vuetify-google-autocomplete": "^1.1.0"
   }
 }
