--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-vue": "^1.4.0",
     "vue": "^2.2.2",
+    "vue-multilanguage": "^3.0.5",
     "vue-router": "^2.3.0",
     "vuetify": "^0.17.2",
     "vuetify-google-autocomplete": "^1.1.0"
