--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {
     "cross-env": "^3.2.3",
-    "laravel-mix": "^0.8.3"
+    "laravel-mix": "^0.8.3",
+    "vue-template-compiler": "^2.5.13"
   },
   "dependencies": {
     "axios": "^0.15.3",
