--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.0.0-beta.3",
     "bootstrap-vue": "^1.4.0",
     "vue": "^2.5.13",
+    "vue-axios": "^2.0.2",
     "vue-multilanguage": "^3.0.5",
     "vue-router": "^2.3.0",
     "vuetify": "^0.17.6",
