--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "bootstrap": "^4.0.0-beta.3",
-    "bootstrap-vue": "^1.4.0",
+    "bootstrap": "^4.0.0",
+    "bootstrap-vue": "^1.5.1",
     "vue": "^2.5.13",
     "vue-axios": "^2.0.2",
     "vue-multilanguage": "^3.0.5",
