--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-multilanguage": "^3.0.5",
     "vue-router": "^2.3.0",
     "vuetify": "^0.17.6",
-    "vuetify-google-autocomplete": "^1.1.0"
+    "vuetify-google-autocomplete": "^1.1.0",
+    "vuex": "^3.0.1"
   }
 }
