--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-axios": "^2.0.2",
     "vue-multilanguage": "^3.0.5",
     "vue-router": "^2.3.0",
+    "vue-upload-image": "^1.0.5",
     "vuetify": "^0.17.6",
     "vuetify-google-autocomplete": "^1.1.0",
     "vuex": "^3.0.1"
